[gd_scene load_steps=13 format=2]

[ext_resource path="res://actors/BaseCreature.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/player/Player.gd" type="Script" id=2]
[ext_resource path="res://actors/player/BasicPlayerProjectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/textures/actors/SmallPurple.png" type="Texture" id=4]
[ext_resource path="res://common/Finder.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 16 )

[node name="Player" index="0" groups=[
"player",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
hit_points = 10
gun = ExtResource( 3 )
move_speed = 300.0
base_acceleration = 1400.0
base_gravity = 1800.0
jump_height = 100.0
gliding_speed = 100.0
diving_speed = 1200.0
wall_jump_multiplier = 0.667
wall_sliding_speed = 100.0
dodge_distance = 96.0
dodge_time = 0.1
early_jump_time = 0.08
coyote_jump_time = 0.08
total_health_packs = 3
healing_time = 2.0
invincibility_time = 1.0

[node name="Detectors" parent="." index="0"]
visible = false

[node name="Up" parent="Detectors" index="0"]
editor/display_folded = true
position = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Up" index="0"]
shape = SubResource( 1 )

[node name="Down" parent="Detectors" index="1"]
editor/display_folded = true
position = Vector2( 0, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Down" index="0"]
shape = SubResource( 2 )

[node name="Left" parent="Detectors" index="2"]
editor/display_folded = true
position = Vector2( -16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Left" index="0"]
shape = SubResource( 3 )

[node name="Right" parent="Detectors" index="3"]
editor/display_folded = true
position = Vector2( 16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/Right" index="0"]
shape = SubResource( 4 )

[node name="LeftWall" type="Area2D" parent="Detectors" index="4"]
editor/display_folded = true
position = Vector2( -24, 0 )
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/LeftWall" index="0"]
shape = SubResource( 5 )

[node name="RightWall" type="Area2D" parent="Detectors" index="5"]
editor/display_folded = true
position = Vector2( 24, 0 )
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectors/RightWall" index="0"]
shape = SubResource( 6 )

[node name="Sprite" parent="." index="1"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="." index="2"]
visible = false
shape = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]
current = true

[node name="State" type="Node" parent="." index="4"]

[node name="Finder" parent="." index="5" instance=ExtResource( 5 )]

[node name="InvincibilityTimer" type="Timer" parent="." index="6"]
